Bug 1003432: Expose CustomEvent in Worker. r=smaug